--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -21,8 +21,8 @@
                 android:orientation="horizontal">
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="#dddd00"
                     android:clickable="true"
                     android:scaleType="fitXY"
@@ -39,8 +39,8 @@
                     android:layout_weight="1" />
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="#000000"
                     android:clickable="true"
                     android:scaleType="fitXY"
@@ -56,8 +56,8 @@
                     android:layout_weight="1" />
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/bg2"
                     android:clickable="true"
                     android:scaleType="fitXY"
@@ -74,8 +74,8 @@
                 android:orientation="horizontal">
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/bg"
                     android:clickable="true"
                     android:scaleType="fitXY"
@@ -85,8 +85,8 @@
                     app:miv_mask_level="foreground" />
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/bg"
                     android:clickable="true"
@@ -102,7 +102,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="前景遮罩"
+                    android:text="&lt;&lt;前景遮罩"
                     android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -114,8 +114,8 @@
                 android:orientation="horizontal">
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/bg"
                     android:clickable="true"
                     android:scaleType="fitXY"
@@ -125,8 +125,8 @@
                     app:miv_mask_level="background" />
 
                 <cn.forward.androids.views.MaskImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/bg"
                     android:clickable="true"
@@ -142,7 +142,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="背景遮罩"
+                    android:text="&lt;&lt;背景遮罩"
                     android:textColor="#000000"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -154,14 +154,14 @@
                 android:orientation="horizontal">
 
                 <cn.forward.androids.views.STextView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
                     android:background="#00ff00"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="STextView"
                     android:textColor="#000000"
-                    app:sel_background_border_color="#ff0000"
+                    app:sel_background_border_color="#0000ff"
                     app:sel_background_border_pressed="#888888"
                     app:sel_background_border_width="4dp"
                     app:sel_background_pressed="#ffffff"
@@ -170,8 +170,8 @@
 
                 <cn.forward.androids.views.STextView
                     android:id="@+id/stextview"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
                     android:layout_marginLeft="5dp"
                     android:background="#00ff00"
                     android:clickable="true"
@@ -189,8 +189,8 @@
                     app:stv_text_color_selected="#ff8800" />
 
                 <cn.forward.androids.views.SFrameLayout
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/bg"
                     android:clickable="true"
@@ -200,6 +200,20 @@
                     app:sel_background_border_width="8dp"
                     app:sel_background_corners="10dp"
                     app:sel_background_pressed="@drawable/ic_launcher" />
+
+                <cn.forward.androids.views.STextView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="10dp"
+                    android:clickable="true"
+                    android:enabled="false"
+                    android:gravity="center"
+                    android:text="disable"
+                    app:sel_background_border_disable="#fff0"
+                    app:sel_background_border_width="2dp"
+                    app:sel_background_corners="6dp"
+                    app:sel_background_disable="#888"
+                    app:stv_text_color_disable="#fff" />
             </LinearLayout>
 
             <LinearLayout
